# middleTool

./: .gitignore  Cargo.toml  SKILLS.md  TODO.md
src/: app.rs  config.rs  main.rs
src/db/: connection.rs  mod.rs  sqlite.rs  tests.rs
src/editor/: statement.rs
src/theme/: mod.rs  palette.rs  styles.rs  typography.rs
src/views/: connection_dialog.rs  editor_panel.rs  mod.rs  results_panel.rs  sidebar.rs
src/widgets/: data_table.rs  db_tree.rs  mod.rs  splitter.rs  sql_editor.rs  status_bar.rs
